--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../../public/css/application.css">
+  <link rel="stylesheet" href="/css/application.css">
   <!-- usually this is at the end, but it's small -->
-  <script src="../../public/js/application.js"></script>
+  <script src="/js/application.js"></script>
   <title>Hello Bye</title>
 </head>
 <body>
@@ -14,11 +14,11 @@
   <br>
   <div id="helloWordsAndPic">
     <h1 class="hello words">HELLO WORLD</h1>
-    <img src="../../public/images/hello.jpg" alt="neon hello" id="hiya">
+    <img src="/images/hello.jpg" alt="neon hello" id="hiya">
   </div>
   <div id="goodbyeWordsAndPic">
     <h1 class="bye words">GOODBYE!</h1>
-    <img src="../../public/images/goodbye.jpg" alt="goodbye on blue wall" id="ciao">
+    <img src="/images/goodbye.jpg" alt="goodbye on blue wall" id="ciao">
   </div>
   <br>
   <br>
